Parse forecast data into readable daily format, basic forecast page UI

--- a/src/app/pages/current-weather/current-weather.component.html
+++ b/src/app/pages/current-weather/current-weather.component.html
@@ -57,4 +57,4 @@
         </tbody>
     </table>
 </div>
-<a href="/four-days">See 4 day forecast</a>
+<a [routerLink]="['four-days']">See 4 day forecast</a>
