UI improvements. Added loaders

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,4 +3,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    .spinner {
+        margin: 50px 0;
+        width: 50px;
+        height: 10px;
+        background-color: black;
+        animation: spin 600ms ease-in-out infinite;
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(345deg);
+    }
 }
