--- a/src/app/pages/forecast/forecast.component.scss
+++ b/src/app/pages/forecast/forecast.component.scss
@@ -23,6 +23,10 @@
                 border-radius: 5px;
                 padding: 4px 8px;
                 cursor: pointer;
+
+                &--selected {
+                    background-color: rgb(143, 212, 216);
+                }
             }
         }
 
